<?xml version="1.0"?>
<package format="2">
  <name>subproject4</name>
  <version>0.0.0</version>
  <description>Velocity Correction, make sure velocity biggger than min velocity</description>
  <license>GPL</license>
  <url></url>
  <author email="laiyichengyuntech@gmail.com">laiyichengyuntech</author>
  <maintainer email="laiyichengyuntech@gmail.com">laiyichengyuntech</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
